# mcphub

./: .gitignore  CLAUDE.md  PRD.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js
docs/: README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs
src/components/: AddServerModal.tsx  ServerCard.tsx  ServerDetail.tsx  ServerList.tsx  Sidebar.tsx  TitleBar.tsx
src/lib/: tauri.ts
src/stores/: appStore.ts
src/types/: mcp.ts
