[package]
name = "mcphub"
version = "0.1.0"
description = "MCP Server Configuration Manager"
authors = ["Justin Johnson"]
edition = "2021"

[lib]
name = "mcphub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["process", "time"] }
thiserror = "1"
